src/test/ui/issues/issue-11680.stderr
error[E0603]: enum `Foo` is private
  --> $DIR/issue-11680.rs:6:21
   |
LL |     let _b = other::Foo::Bar(1);
   |                     ^^^

error[E0603]: enum `Foo` is private
  --> $DIR/issue-11680.rs:9:27
   |
LL |     let _b = other::test::Foo::Bar(1);
   |                           ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
